deployment-nodejs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-server
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
        - name: node-server
          image: cristiancapa20/usuarios_back:v3 # Reemplaza esto con tu imagen de Node.js
          ports:
            - containerPort: 5000
