deployment-react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: cristiancapa20/usuarios_front:v22  # Reemplaza con la imagen correcta
          ports:
            - containerPort: 3000
