service-back.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000  # Puerto en el que escucha tu backend
    # Puedes agregar "targetPort" si difiere del puerto del contenedor
  type: NodePort  # Agregamos la configuración NodePort
