service-front.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000  # Puerto en el que escucha tu frontend
  type: NodePort  # Agregamos la configuración NodePort
