service.yml
# services.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: LoadBalancer
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30005

---

apiVersion: v1
kind: Service
metadata:
  name: node-server-service
spec:
  type: LoadBalancer
  selector:
    app: node-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30001

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-db-service
spec:
  type: LoadBalancer
  selector:
    app: mongo-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 30002
