network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redapp
  namespace: easyhouse
spec:
  podSelector:
    matchLabels:
      app: react-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: node-server
    - podSelector:
        matchLabels:
          app: mongo-db
